--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ nav {
 @media (max-width: 505px) {
   nav {
     padding-bottom: 10px;
+    position: absolute;
+    z-index: 9999;
   }
   nav #main {
     display: none;
@@ -29,6 +31,8 @@ nav {
 @media (min-width: 506px) and (max-width: 768px) {
   nav {
     padding-bottom: 10px;
+    position: absolute;
+    z-index: 9999;
   }
   nav #main {
     display: none;
