--- a/sass/style.scss
+++ b/sass/style.scss
@@ -437,7 +437,8 @@ body {
             padding: 5px 30px;
         }
         &:hover {
-            background: rgb(216, 227, 178);
+            background: white;
+            outline: solid 0.1px black;
             color: #000;
             transition: 0.5s ease;
         }
